fix(style): safari dark mode & add custom font

--- a/styles/partials/fonts.css
+++ b/styles/partials/fonts.css
@@ -1,21 +1,24 @@
 @font-face {
   font-family: 'SofiaPro';
   font-weight: 300;
-  src: url('../../public/assets/fonts/351114_1_0.eot');
-  src: url('../../public/assets/fonts/351114_1_0.eot?#iefix') format('embedded-opentype'),
-  url('../../public/assets/fonts/351114_1_0.woff2') format('woff2'),
-  url('../../public/assets/fonts/351114_1_0.woff') format('woff'),
-  url('../../public/assets/fonts/351114_1_0.ttf') format('truetype');
+  src: url('../../public/assets/fonts/351114_1_0.woff2') format('woff2'),
+    url('../../public/assets/fonts/351114_1_0.woff') format('woff'),
+    url('../../public/assets/fonts/351114_1_0.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'SofiaPro';
   font-weight: 700;
-  src: url('../../public/assets/fonts/351114_0_0.eot');
-  src: url('../../public/assets/fonts/351114_0_0.eot?#iefix') format('embedded-opentype'),
-  url('../../public/assets/fonts/351114_0_0.woff2') format('woff2'),
-  url('../../public/assets/fonts/351114_0_0.woff') format('woff'),
-  url('../../public/assets/fonts/351114_0_0.ttf') format('truetype');
+  src: url('../../public/assets/fonts/351114_0_0.woff2') format('woff2'),
+    url('../../public/assets/fonts/351114_0_0.woff') format('woff'),
+    url('../../public/assets/fonts/351114_0_0.ttf') format('truetype');
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500&display=swap');
+@font-face {
+  font-family: 'Playfair Display';
+  font-weight: 400;
+  font-display: swap;
+  src: url('../../public/assets/fonts/PlayfairDisplay-Regular.woff2') format('woff2'),
+    url('../../public/assets/fonts/PlayfairDisplay-Regular.woff') format('woff'),
+    url('../../public/assets/fonts/PlayfairDisplay-Regular.ttf') format('truetype');
+}
